# SourceAnchorEdit

./: .gitignore  DEPLOYMENT.md  LICENSE  METRICS_COMPARISON.md  METRICS_DONE.md  README.md  README_zh.md  pyproject.toml  requirements.txt
configs/experiments/: source_anchor.batch2.example.yaml  source_anchor.batch2.steps.example.yaml  source_anchor.build_cache.example.yaml  source_anchor.demo.example.yaml  source_anchor.demo.steps.example.yaml  source_anchor.use_cache.example.yaml  test_metrics.yaml  test_metrics_dino.yaml  test_metrics_dino_download.yaml
configs/methods/: source_anchor.example.yaml
configs/models/: local_models.example.yaml
configs/web/: source_anchor_web.example.yaml
docs/: config.md  input_format.md  method.md  reproducibility.md
docs/source-anchor-react/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/source-anchor-react/src/: App.jsx  styles.css
docs/source-anchor-web/: README.md  app.js  index.html  styles.css
examples/: two_case_manifest.json
examples/single_case/: sample.json
scripts/: build_inversion_cache.py  build_roi_cache.py  convert_dataset.py  launch_web_demo.py  run_batch.py  run_single.py  smoke_test.py  summarize_metrics.py
src/sourceanchor/: __init__.py  cli.py  config.py  metrics.py  metrics_summary.py  runner.py  schemas.py
src/sourceanchor/datasets/: __init__.py  base.py  piebench.py
src/sourceanchor/input/: __init__.py  loader.py  sample.py
tests/: conftest.py  test_piebench_adapter.py
tools/: revise_thesis_docx.py  source_anchor_web_demo.py
(+33 files in other folders)
