[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceanchor"
version = "0.1.0"
description = "Standalone source-anchor release scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "diffusers==0.37.0",
  "transformers==5.3.0",
  "ftfy",
  "numpy==2.2.6",
  "pandas==2.3.3",
  "pyarrow==23.0.1",
  "pillow==12.0.0",
  "PyYAML>=6.0",
  "scikit-image==0.25.2",
  "lpips",
  "opencv-python==4.13.0",
  "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
source-anchor = "sourceanchor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
